# ML-FORGE

./: CMakeLists.txt  README.md  main.cpp  predict.cpp  run.bat  run.sh
.github/workflows/: ci.yml
include/: mlforge.hpp
include/tinyml/core/: matrix.hpp  tensor.hpp
include/tinyml/supervised/: base.hpp
include/tinyml/supervised/bayes/: gaussian_nb.hpp  naive_bayes.hpp
include/tinyml/supervised/linear/: elastic_net.hpp  lasso.hpp  linear_class.hpp  linear_reg.hpp  logistic_reg.hpp  ridge.hpp
include/tinyml/supervised/nn/activations/: leaky_relu.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/tinyml/supervised/nn/layers/: conv2d.hpp  dense.hpp  flatten.hpp  layer.hpp  loss.hpp  pooling.hpp  relu.hpp
include/tinyml/supervised/nn/optimizers/: adam.hpp  optimizer.hpp  sgd_momentum.hpp
include/tinyml/supervised/svm/: kernels.hpp  svm_classifier.hpp
include/tinyml/supervised/trees/: adaboost.hpp  decision_tree.hpp  gradient_boosting.hpp  random_forest.hpp
include/tinyml/unsupervised/: base.hpp
include/tinyml/unsupervised/clustering/: agglomerative.hpp  dbscan.hpp  kmeans.hpp
include/tinyml/unsupervised/dimensionality/: lda.hpp  pca.hpp  tsne.hpp
include/tinyml/utils/: core_utils.hpp  metrics.hpp
include/tinyml/utils/preprocessing/: scaler.hpp
include/tinyml/utils/visualization/: plot.hpp
src/: mlforge.cpp
src/core/: matrix.cpp  tensor.cpp
src/supervised/linear/: linear_class.cpp  linear_reg.cpp
src/supervised/nn/activations/: relu.cpp  sigmoid.cpp
src/supervised/trees/: adaboost.cpp  decision_tree.cpp  gradient_boosting.cpp  random_forest.cpp
src/utils/preprocessing/: scaler.cpp
src/utils/visualization/: plot.cpp
tests/: test_adaboost.hpp  test_decision_tree.hpp  test_gradient_boosting.hpp  test_kmeans.hpp  test_linear_class.hpp  test_linear_reg.hpp  test_matrix.hpp  test_metrics.hpp  test_optimization.hpp  test_preprocessing.hpp  test_random_forest.hpp  test_relu_forward.hpp  test_runner.cpp  test_sigmoid.hpp  test_tensor.hpp  test_visualization.hpp
